--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -106,12 +106,14 @@
                             <div class="col-md-12">
                               <p class="mbr-fonts-style panel-text display-7">
                                 <strong>
-                                  - <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/inviluppo.maxpat" class="text-primary"><b>inviluppo</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/glissando.maxpat" class="text-primary"><b>glissando</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/maschera_di_tendenza.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random.maxpat" class="text-primary"><b>random</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random_numeri_casuali_per_bande.maxpat" class="text-primary"><b>random numeri casuali per bande</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/panning.zip" class="text-primary"><b>panning</b></a>
+                                  <ul>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/inviluppo.maxpat" class="text-primary"><b>inviluppo</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/glissando.maxpat" class="text-primary"><b>glissando</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/maschera_di_tendenza.maxpat" class="text-primary"><b>maschera di tendenza</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random.maxpat" class="text-primary"><b>random</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random_numeri_casuali_per_bande.maxpat" class="text-primary"><b>random numeri casuali per bande</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/panning.zip" class="text-primary"><b>panning</b></a></li>
+                                    </ul>
                                 </strong>
                                 </p>
                             </div>
@@ -122,12 +124,14 @@
                             <div class="col-md-12">
                               <p class="mbr-fonts-style panel-text display-7">
                                 <strong>
-                                  - <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>oscillatore sinusoidale</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>sintesi additiva</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>am/rm</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>fm</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>poly</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>granulatore</b></a>
+                                  <ul>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>oscillatore sinusoidale</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>sintesi additiva</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>am/rm</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>fm</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>poly</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>granulatore</b></a></li>
+                                    </ul>
                                 </strong>
                                 </p>
                             </div>
@@ -145,8 +149,8 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a></li>
                                 </ul>
+                                <p class="mbr-text mbr-fonts-style display-7">
                                   FILTERS
-                                  <p class="mbr-text mbr-fonts-style display-7">
                                   <ul>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a></li>
@@ -157,8 +161,8 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></li>
                                 </ul>
-                                EFFECTS & REVERBS
                                 <p class="mbr-text mbr-fonts-style display-7">
+                                EFFECTS & REVERBS
                                   <ul>
                                 <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a></li>
                                 <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a></li>
