--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -99,6 +99,8 @@
                     <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab0" aria-selected="true"><strong>Control</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab1" aria-selected="true"><strong>Synthesis</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab2" aria-selected="true"><strong>Filters</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab2" aria-selected="true"><strong>Tutorials</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab2" aria-selected="true"><strong>Ready to Use</strong></a></li>
                 </ul>
                 <div class="tab-content">
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
@@ -177,9 +179,21 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-                                    Free Website Builder offers a huge collection of 2500+ website blocks, templates and
-                                    themes with thousands flexible options. Combine blocks from different themes to
-                                    create a unique mix.</p>
+                                  Coming soon!
+                                    </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab3" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                              <p class="mbr-fonts-style panel-text display-7">
+                                <strong>
+                                  <ul>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/synth/synth_granulatore.zip" class="text-primary"><b>Synth Granulatore</b></a></li>
+                                    </ul>
+                                </strong>
+                                </p>
                             </div>
                         </div>
                     </div>
