--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -151,6 +151,7 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a></li>
                                 </ul>
+                                <p class="mbr-text mbr-fonts-style display-7">
                                 <strong>
                                   FILTERS
                                   <ul>
@@ -163,6 +164,7 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></li>
                                 </ul>
+                                <p class="mbr-text mbr-fonts-style display-7">
                                 <strong>
                                 EFFECTS & REVERBS
                                   <ul>
