--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -176,7 +176,7 @@
                                   </strong>
                             </div>
                         </div>
-
+                        </div>
                     </div>
                     <div id="tab4" class="tab-pane" role="tabpanel">
                         <div class="row">
