--- a/pages/learn.html
+++ b/pages/learn.html
@@ -92,72 +92,70 @@
 
 
 <!-- Cards Grid-->
-<div class="cardgrid">
-  <h1>Responsive Card Grid Layout</h1>
-  <ul class="cards">
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-        <div class="card_content">
-          <h2 class="card_title">Card Grid Layout</h2>
-          <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-          <button class="btn card_btn">Read More</button>
-        </div>
-      </div>
-    </li>
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>
-        <div class="card_content">
-          <h2 class="card_title">Card Grid Layout</h2>
-          <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-          <button class="btn card_btn">Read More</button>
-        </div>
-      </div>
-    </li>
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="https://picsum.photos/500/300/?image=11"></div>
-        <div class="card_content">
-          <h2 class="card_title">Card Grid Layout</h2>
-          <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-          <button class="btn card_btn">Read More</button>
-        </div>
-      </div>
-    </li>
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="https://picsum.photos/500/300/?image=14"></div>
-        <div class="card_content">
-          <h2 class="card_title">Card Grid Layout</h2>
-          <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-          <button class="btn card_btn">Read More</button>
-        </div>
-      </div>
-    </li>
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="https://picsum.photos/500/300/?image=17"></div>
-        <div class="card_content">
-          <h2 class="card_title">Card Grid Layout</h2>
-          <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-          <button class="btn card_btn">Read More</button>
-        </div>
-      </div>
-    </li>
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="https://picsum.photos/500/300/?image=2"></div>
-        <div class="card_content">
-          <h2 class="card_title">Card Grid Layout</h2>
-          <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-          <button class="btn card_btn">Read More</button>
-        </div>
-      </div>
-    </li>
-  </ul>
-</div>
+<section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+    <div class="container">
+        <div class="row mt-4">
+            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="https://www.gabrielavelitch.com/assets/images/learn/spectrogram.png" data-slide-to="0" data-bs-slide-to="0">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Storia della Musica Elettroacustica</strong></h5>
 
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">dal 1948 alla Computer Music.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                            &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/features2.jpg" data-slide-to="1" data-bs-slide-to="1">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Mobile Friendly</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">You don't have to code to create your own
+                            site. Select one of available themes in the Mobirise Site Maker.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                            &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/features3.jpg" data-slide-to="2" data-bs-slide-to="2">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Unique Styles</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
+                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                            &gt;</a></div>
+                </div>
+            </div><div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/corkino-1030x580.jpg" data-slide-to="3" data-bs-slide-to="3">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Unique Styles</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
+                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                            &gt;</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
