--- a/pages/learn.html
+++ b/pages/learn.html
@@ -112,15 +112,14 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/features2.jpg" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="https://www.gabrielavelitch.com/assets/images/learn/graphscore.png" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Mobile Friendly</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Laboratorio di Tecnologie Musicali</strong></h5>
 
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">You don't have to code to create your own
-                            site. Select one of available themes in the Mobirise Site Maker.</p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
             </div>
@@ -158,37 +157,6 @@
 </section>
 
 
-
-
-
-<section data-bs-version="5.1" class="features4 cid-sYzcirxQYM" id="features5-1h">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <div class="card-wrapper">
-                    <div class="row">
-                        <div class="col-12 col-md-7">
-                            <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
-                                    <strong>Storia della Musica Elettroacustica</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">dal 1948 alla Computer Music<br><br></p>
-                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary display-4">Learn more</a></div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-5">
-                            <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/spectrogram.png" href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6">
-                <div class="card-wrapper">
-                    <div class="row">
-                        <div class="col-12 col-md-7">
-                            <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
                                     <strong>Laboratorio di Tecnologie Musicali</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4"><br><br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary display-4">Learn more</a></div>
