--- a/pages/learn.html
+++ b/pages/learn.html
@@ -140,13 +140,12 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/corkino-1030x580.jpg" data-slide-to="3" data-bs-slide-to="3">
+                        <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png" data-slide-to="3" data-bs-slide-to="3">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Unique Styles</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
 
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
@@ -154,48 +153,25 @@
             </div>
         </div>
     </div>
-</section>
-
-
-                                    <strong>Laboratorio di Tecnologie Musicali</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4"><br><br></p>
-                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary display-4">Learn more</a></div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-5">
-                            <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/graphscore.png" href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="item features-image сol-12 col-md-6 col-lg-3">
+        <div class="item-wrapper">
+            <div class="item-img">
+                <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png" data-slide-to="4" data-bs-slide-to="4">
             </div>
+            <div class="item-content">
+                <h5 class="item-title mbr-fonts-style display-7"><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
+
+                <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
+            </div>
+            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    &gt;</a></div>
         </div>
     </div>
+</div>
+</div>
 </section>
 
-<section data-bs-version="5.1" class="features4 cid-sYzcirxQYM" id="features5-1h">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <div class="card-wrapper">
-                    <div class="row">
-                        <div class="col-12 col-md-7">
-                            <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon<br><br></p>
-                                <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-5">
-                            <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="col-12 col-lg-6">
                 <div class="card-wrapper">
                     <div class="row">
