--- a/pages/learn.html
+++ b/pages/learn.html
@@ -156,10 +156,10 @@
     <div class="item features-image сol-12 col-md-6 col-lg-3">
         <div class="item-wrapper">
             <div class="item-img">
-                <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png" data-slide-to="4" data-bs-slide-to="4">
+                <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
             </div>
             <div class="item-content">
-                <h5 class="item-title mbr-fonts-style display-7"><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
+                <h5 class="item-title mbr-fonts-style display-7"><strong>Il Paradigma di Stockhausen</strong></h5>
 
                 <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
             </div>
@@ -169,30 +169,6 @@
     </div>
 </div>
 </div>
-</section>
-
-
-            <div class="col-12 col-lg-6">
-                <div class="card-wrapper">
-                    <div class="row">
-                        <div class="col-12 col-md-7">
-                            <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Il Paradigma di Stockhausen</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon</p>
-                                <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-5">
-                            <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 
