--- a/pages/learn.html
+++ b/pages/learn.html
@@ -101,7 +101,8 @@
                         <img src="https://www.gabrielavelitch.com/assets/images/learn/spectrogram.png" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Storia della Musica Elettroacustica</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7">
+                          <br><strong>Storia della Musica Elettroacustica</strong></h5>
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">dal 1948 alla Computer Music.</p>
                     </div>
@@ -115,7 +116,8 @@
                         <img src="https://www.gabrielavelitch.com/assets/images/learn/graphscore.png" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Laboratorio di Tecnologie Musicali</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7">
+                          <br><strong>Laboratorio di Tecnologie Musicali</strong></h5>
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
                     </div>
@@ -129,7 +131,8 @@
                         <img src="assets/images/features3.jpg" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Unique Styles</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7">
+                          <br><strong>Unique Styles</strong></h5>
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
                             in the Mobirise Website Software contains a set of unique blocks.<br></p>
@@ -143,7 +146,8 @@
                         <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png" data-slide-to="3" data-bs-slide-to="3">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7">
+                          <br><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
 
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
                     </div>
@@ -159,7 +163,8 @@
                 <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
             </div>
             <div class="item-content">
-                <h5 class="item-title mbr-fonts-style display-7"><strong>Il Paradigma di Stockhausen</strong></h5>
+                <h5 class="item-title mbr-fonts-style display-7">
+                  <br><strong>Il Paradigma di Stockhausen</strong></h5>
 
                 <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
             </div>
