--- a/pages/learn.html
+++ b/pages/learn.html
@@ -157,26 +157,52 @@
             </div>
         </div>
     </div>
-    <div class="item features-image сol-12 col-md-6 col-lg-3">
-        <div class="item-wrapper">
-            <div class="item-img">
-                <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
-            </div>
-            <div class="item-content">
-                <h5 class="item-title mbr-fonts-style display-7">
-                  <br><strong>Il Paradigma di Stockhausen</strong></h5>
+</div>
+</div>
+</section>
 
-                <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
+<!-- Cards Grid-->
+<section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+    <div class="container">
+        <div class="row mt-4">
+          <div class="item features-image сol-12 col-md-6 col-lg-3">
+              <div class="item-wrapper">
+                  <div class="item-img">
+                      <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
+                  </div>
+                  <div class="item-content">
+                      <h5 class="item-title mbr-fonts-style display-7">
+                        <br><strong>Il Paradigma di Stockhausen</strong></h5>
+
+                      <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
+                  </div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                          &gt;</a></div>
+                </div>
             </div>
-            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
-                    &gt;</a></div>
+            
         </div>
     </div>
 </div>
 </div>
 </section>
 
+<div class="item features-image сol-12 col-md-6 col-lg-3">
+    <div class="item-wrapper">
+        <div class="item-img">
+            <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
+        </div>
+        <div class="item-content">
+            <h5 class="item-title mbr-fonts-style display-7">
+              <br><strong>Il Paradigma di Stockhausen</strong></h5>
 
+            <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
+        </div>
+        <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                &gt;</a></div>
+    </div>
+</div>
+</div>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
